# eoProcessors

./: .gitignore  README.md
.github/workflows/: build_on_tag.yaml  chdm_build.yaml  harvester_build.yaml  stac_build.yaml
SARCoherenceTool/: coherence_pysar.py  requirements.txt
STACReader/: amazon_stac.py
cdsetool-cli/: .env.list  Dockerfile  README.md  cli.py  docker-compose.yml  generate_netrc.sh  generate_netrc_local.sh  pyproject.toml  requirements.txt
cdsetool-cli/cdsetool_cli/: cli.py  cli_2.py  harvester.py  utils.py
cdsetool-cli/cdsetool_cli/config/: config.json
cdsetool-cli/cdsetool_cli/providers/: __init__.py  copernicus.py  earthdata.py
cdsetool-cli/config/: config.json  config_modis.json  config_test_copernicus.json
cdsetool-cli/tests/: test_cli.py  test_utils.py
fmask_clouds/: config.yaml  dockerfile  mask_generation_fmask.py
harvester/: .env.list  Dockerfile  Makefile  README.md  dockerfile  download.py  pyproject.toml  requirements.txt  test_download.py
harvester/harvester/: docker-compose.yml  download.py
harvester/tests/: test_download.py  test_integration_copernicus.py
noa-change-detection-mapping/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
noa-change-detection-mapping/config/: config_service.json
noa-change-detection-mapping/noachdm/: __init__.py  chdm.py  cli.py  utils.py
noa-change-detection-mapping/noachdm/messaging/: __init__.py  kafka_consumer.py  kafka_producer.py  message.py
noa-change-detection-mapping/noachdm/models/: BIT.py  ChangeFormer.py  ChangeFormerBaseNetworks.py  DTCDSCN.py  IFN.py  SiamUnet_conc.py  SiamUnet_diff.py  __init__.py  basic_model.py  evaluator.py  help_funcs.py  networks.py  pixel_shuffel_up.py  resnet.py
noa-change-detection-mapping/noachdm/notebooks/: BIT_model.ipynb
noa-change-detection-mapping/tests/sample_data/output_tiles_larissa/: dates.csv
noa-change-detection-mapping/tests/sample_data/output_tiles_larissa/2021/: tile_0_dt_0.tif  tile_0_dt_1.tif  tile_0_dt_10.tif  tile_0_dt_11.tif  tile_0_dt_12.tif  tile_0_dt_13.tif  tile_0_dt_14.tif  tile_0_dt_15.tif  tile_0_dt_16.tif  tile_0_dt_17.tif  tile_0_dt_18.tif  tile_0_dt_19.tif  tile_0_dt_2.tif  tile_0_dt_20.tif  tile_0_dt_21.tif  tile_0_dt_22.tif  tile_0_dt_23.tif  tile_0_dt_24.tif  tile_0_dt_3.tif  tile_0_dt_4.tif  tile_0_dt_5.tif  tile_0_dt_6.tif  tile_0_dt_7.tif  tile_0_dt_8.tif  tile_0_dt_9.tif  tile_0_mask_crop_id.tif  tile_0_mask_parcel_id.tif
noa-harvester/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
noa-harvester/config/: config_earthdata_modis.json  config_earthsearch_single.json  config_from_id.json  config_sentinel_1_2.json  config_sentinel_1_2_modis.json  config_sentinel_2.json  config_sentinel_3.json  config_service.json  config_ssm.json  config_test_copernicus.json  config_test_earthaccess.json  config_test_earthsearch.json
noa-harvester/noaharvester/: __init__.py  cli.py  harvester.py  utils.py
noa-harvester/noaharvester/db/: database.ini  utils.py
noa-harvester/noaharvester/messaging/: __init__.py  kafka_consumer.py  kafka_producer.py  message.py
noa-harvester/noaharvester/providers/: __init__.py  copernicus.py  earthdata.py  earthsearch.py
noa-harvester/tests/: conftest.py  test_cli.py  test_harvester.py  test_providers.py  test_utils.py
noa-harvester/tests/test_data/: foo_shape.dbf  foo_shape.prj  foo_shape.shp  foo_shape.shx
noa-openeo/: .gitignore  README.md  cli.py  requirements.txt
noa-openeo/config/: default.json
noa-openeo/noaopeneo/: __init__.py  monthly_median.py  utils.py
noa-openeo/notebooks/: get_oidc_identifier.ipynb  ssm.ipynb
noa-postprocess-aggregate/: CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
noa-postprocess-aggregate/noapostaggregate/: cli.py  postaggregate.py
noa-preprocess/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
noa-preprocess/config/: default_clip.json  default_unzip_all.json  default_unzip_copernicus copy.json  unzip_s2_limited.json  unzip_s3.json
noa-preprocess/noapreprocess/: __init__.py  cli.py  preprocess.py
noa-stac-ingest/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
noa-stac-ingest/config/: config_service.json  config_service_chdm.json  config_service_s3.json  default_config.json  init_catalog.json  init_catalog_dev.json  init_collection_chdm_s2.json  init_collection_chdm_s2_dev.json  init_collection_dev.json  init_collection_mm_s2.json  init_collection_mm_s2_dev.json  init_collection_sentinel.json  init_collection_wrf.json  init_collection_wrf_dev.json  test_config.json  test_config_chdm_s2.json  test_config_mm_s2.json
noa-stac-ingest/noastacingest/: __init__.py  _create_catalog.py  _create_collection.py  cli.py  create_item_beyond.py  create_item_copernicus.py  ingest.py  utils.py
noa-stac-ingest/noastacingest/db/: utils.py
noa-stac-ingest/noastacingest/messaging/: __init__.py  kafka_consumer.py  kafka_producer.py  message.py
noa-stac-ingest/tests/: wrf_example_file_2021-10.csv
noa-ui/: .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  environment.yml  manage.py  reqs.txt  requirements.txt  responses.json
noa-ui/browser/: urls.py  views.py
noa-ui/browser/templates/: base.html  dashboard.html  navbar.html  results.html  results_bak.html
noa-ui/browser/tests/: test_search_request.py
noa-ui/sentinel_browser/: asgi.py  settings.py  settings_initial.py  urls.py  wsgi.py
noa-ui/stac_app/: apps.py  serializers.py  urls.py  views.py
noa-ui/stac_app/templates/: index.html
noa-ui/stac_app/templates/stac_app/: index.html
noa-ui/utils/: geo_utils.py
poc_STAC_read_and_plot/: amazon_stac.py
s2-processor/: environment.yml  s2ard.py
