# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=69.1.1"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "harvester"
authors = [
    {name = "NOA - Beyond"}
]
description = "Earth Observation data harvester from various sources/hubs"
requires-python = ">=3.11.8"
dependencies = [
    "build>=1.1.1",
    "requests>=2.28.2",
    "tqdm>=4.65.0",
]
keywords = [
    "data pipelines",
    "data engineering",
]
license = {text = "Apache Software License (Apache 2.0)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11.8",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = [
    "black>=24.2.0",
    "coverage>=7.4.3",
    "flake8>=7.0.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["harvester*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "harvester.__version__"}

[tool.pytest.ini_options]
addopts="""
--cov-context test  \
--cov-config pyproject.toml \
--cov-report xml:coverage.xml \
--cov-report term-missing \
--cov harvester \
--cov tests \
--no-cov-on-fail \
-ra \
-W ignore"""
testpaths = [
  "tests"
]