# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=69.1.1"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "noaharvester"
authors = [
    {name = "NOA - Beyond"}
]
description = "Earth Observation data harvester from various sources/hubs"
requires-python = ">=3.12.0"
dependencies = [
    "build>=1.1.1",
    "click>=8.1.7",
    "cdsetool>=0.2.13",
    "earthaccess>=0.9.0",
    "kafka-python3>=3.0.0",
    "psycopg>=3.2.3",
    "pyproj>=3.6.1",
    "pyshp>=2.3.1",
    "pystac-client>=0.8.2"
]
keywords = [
    "data pipelines",
    "data engineering",
]
license = {text = "AGPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12.0",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = [
    "black>=24.2.0",
    "coverage>=7.4.3",
    "flake8>=7.0.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
noaharvester = "noaharvester:cli"

[tool.setuptools.packages.find]
include = ["noaharvester*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "noaharvester.__version__"}

[tool.pytest.ini_options]
addopts="""
--cov-context test  \
--cov-config pyproject.toml \
--cov-report xml:coverage.xml \
--cov-report term-missing \
--cov noaharvester \
--cov tests \
--no-cov-on-fail \
-ra \
-W ignore"""
testpaths = [
  "tests"
]