# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=69.1.1"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "noapreprocess"
authors = [
    {name = "NOA - Beyond"}
]
description = "Earth Observation data postprocessing:aggregation"
requires-python = ">=3.11.8"
dependencies = [
    "build>=1.1.1",
    "click>=8.1.7",
    "dask>=2024.6.2",
    "pyproj>=3.6.1",
    "pyshp>=2.3.1",
    "rasterio>=1.3.10",
    "rioxarray>=0.15.7",
    "xarray>=2024.6.0"
]
keywords = [
    "data pipelines",
    "data engineering",
]
license = {text = "AGPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11.8",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = [
    "black>=24.2.0",
    "coverage>=7.4.3",
    "flake8>=7.0.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
noapostaggregate = "noapostaggregate:cli"

[tool.setuptools.packages.find]
include = ["noapostaggregate*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "noapostaggregate.__version__"}

[tool.pytest.ini_options]
addopts="""
--cov-context test  \
--cov-config pyproject.toml \
--cov-report xml:coverage.xml \
--cov-report term-missing \
--cov noapostaggregate \
--cov tests \
--no-cov-on-fail \
-ra \
-W ignore"""
testpaths = [
  "tests"
]